<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2021 Squircle IDE contributors.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_about">

        <Preference
            android:icon="@mipmap/ic_launch_screen"
            android:summary="@string/pref_about_summary"
            android:key="ABOUT"/>

        <Preference
            android:title="@string/pref_privacy_policy_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/massivemadness/Squircle-IDE/blob/master/PRIVACY-POLICY.md"/>
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_contribute">

        <Preference
            android:title="@string/pref_contribute_title"
            android:summary="@string/pref_contribute_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/massivemadness/Squircle-IDE"/>
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>