<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2022 Squircle IDE contributors.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_graph"
    app:startDestination="@id/headersFragment">

    <fragment
        android:id="@+id/headersFragment"
        android:name="com.blacksquircle.ui.feature.settings.ui.fragment.HeadersFragment"
        android:label="@string/label_settings"
        tools:layout="@layout/fragment_headers">
        <deepLink app:uri="blacksquircle://settings" />
        <action
            android:id="@+id/to_applicationFragment"
            app:destination="@id/applicationFragment" />
        <action
            android:id="@+id/to_editorFragment"
            app:destination="@id/editorFragment" />
        <action
            android:id="@+id/to_codeStyleFragment"
            app:destination="@id/codeStyleFragment" />
        <action
            android:id="@+id/to_filesFragment"
            app:destination="@id/filesFragment" />
        <action
            android:id="@+id/to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>

    <fragment
        android:id="@+id/applicationFragment"
        android:name="com.blacksquircle.ui.feature.settings.ui.fragment.ApplicationFragment"
        android:label="@string/label_application">
        <deepLink app:uri="blacksquircle://settings/application" />
    </fragment>

    <fragment
        android:id="@+id/editorFragment"
        android:name="com.blacksquircle.ui.feature.settings.ui.fragment.EditorFragment"
        android:label="@string/label_editor">
        <deepLink app:uri="blacksquircle://settings/editor" />
        <action
            android:id="@+id/to_presetDialog"
            app:destination="@id/presetDialog" />
    </fragment>

    <fragment
        android:id="@+id/codeStyleFragment"
        android:name="com.blacksquircle.ui.feature.settings.ui.fragment.CodeStyleFragment"
        android:label="@string/label_code_style">
        <deepLink app:uri="blacksquircle://settings/codestyle" />
    </fragment>

    <fragment
        android:id="@+id/filesFragment"
        android:name="com.blacksquircle.ui.feature.settings.ui.fragment.FilesFragment"
        android:label="@string/label_files">
        <deepLink app:uri="blacksquircle://settings/files" />
    </fragment>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.blacksquircle.ui.feature.settings.ui.fragment.AboutFragment"
        android:label="@string/label_about">
        <deepLink app:uri="blacksquircle://settings/about" />
        <action
            android:id="@+id/action_aboutFragment_to_changeLogFragment"
            app:destination="@id/changeLogFragment" />
    </fragment>

    <dialog
        android:id="@+id/presetDialog"
        android:name="com.blacksquircle.ui.feature.settings.ui.dialog.PresetDialog"
        android:label="@string/label_keyboard_preset"
        tools:layout="@layout/dialog_preset">
        <deepLink app:uri="blacksquircle://settings/editor/preset" />
    </dialog>

    <fragment
        android:id="@+id/changeLogFragment"
        android:name="com.blacksquircle.ui.feature.settings.ui.fragment.ChangeLogFragment"
        android:label="@string/label_changelog"
        tools:layout="@layout/fragment_changelog">
        <deepLink app:uri="blacksquircle://settings/about/changelog" />
    </fragment>

</navigation>